[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Comic MeDiDa korrigiert.png" type="Texture" id=1]
[ext_resource path="res://scripts/Comic1.gd" type="Script" id=2]
[ext_resource path="res://scenes/Musik_Sounds/Menu_Swap.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Comic1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 487, 956 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Comic1/Panel1:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Comic1/Panel2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Comic1/Panel3/ColorRect2:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Comic1/Panel3/ColorRect4:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Comic1/Panel4:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "zu_ Panel2"
tracks/0/type = "value"
tracks/0/path = NodePath("Comic1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 487, 956 ), Vector2( 487, 500 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Comic1/Panel1:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Comic1/Panel2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "zu_Panel3"
tracks/0/type = "value"
tracks/0/path = NodePath("Comic1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 487, 500 ), Vector2( 487, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Comic1/Panel2:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Comic1/Panel3/ColorRect2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Comic1/Panel3/ColorRect4:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "zu_Panel4"
tracks/0/type = "value"
tracks/0/path = NodePath("Comic1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 487, 80 ), Vector2( 487, -415 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Comic1/Panel3/ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Comic1/Panel3/ColorRect4:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Comic1/Panel4:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 483.5, 275.5 )

[node name="Comic1" type="Node2D"]
script = ExtResource( 2 )

[node name="Hintergrund" type="ColorRect" parent="."]
margin_left = -166.0
margin_top = -158.0
margin_right = 1104.0
margin_bottom = 742.0
rect_min_size = Vector2( 900, 900 )
mouse_filter = 2

[node name="Comic1" type="Sprite" parent="."]
position = Vector2( 487, 956 )
scale = Vector2( 0.74745, 0.74745 )
texture = ExtResource( 1 )

[node name="Panel1" type="ColorRect" parent="Comic1"]
margin_left = -638.0
margin_top = -1232.0
margin_right = 632.0
margin_bottom = -570.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="Panel2" type="ColorRect" parent="Comic1"]
margin_left = -634.0
margin_top = -563.0
margin_right = 634.0
margin_bottom = -55.0
mouse_filter = 2

[node name="Panel3" type="Node2D" parent="Comic1"]

[node name="ColorRect2" type="ColorRect" parent="Comic1/Panel3"]
margin_left = -637.0
margin_top = -48.0001
margin_right = 8.0
margin_bottom = 597.0
mouse_filter = 2

[node name="ColorRect4" type="ColorRect" parent="Comic1/Panel3"]
margin_left = -2.67578
margin_top = -78.9351
margin_right = 642.324
margin_bottom = 552.065
mouse_filter = 2

[node name="Panel4" type="ColorRect" parent="Comic1"]
margin_left = -634.156
margin_top = 544.518
margin_right = 635.844
margin_bottom = 1206.52
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
"anims/zu_ Panel2" = SubResource( 2 )
anims/zu_Panel3 = SubResource( 3 )
anims/zu_Panel4 = SubResource( 4 )

[node name="Skip" type="Button" parent="."]
margin_left = 19.0
margin_top = 7.0
margin_right = 141.0
margin_bottom = 36.0
text = "SKIP"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 481.5, 269.5 )
shape = SubResource( 5 )

[node name="Menu_Swap" parent="." instance=ExtResource( 3 )]
position = Vector2( 480, 270 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
